--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -72,10 +72,22 @@ $(function() {
 </script>
 
 <% content_for :title_bar do %>
+  <a id="add_story" href="#"><%= '+' + t('add story') %></a>
   <div id="velocity" class="velocity"></div>
-  <%= render :partial => 'projects/nav',
-             :locals => {:project => @project, :show_column_toggles => true} %>
-             | <a id="add_story" href="#"><%= t('add story') %></a>
+  <div id="column-toggles"></div>
+<% end %>
+
+<% content_for :project_title_bar do%>
+  <h1 id="project-name-title"><%= @project.name %></h1>
+  <div id="project-menu">
+    <div id="project-menu-wrapper">
+      <div class="project-menu-bullet"><%= link_to_unless_current Story.model_name.human(:count => 2), project_path(@project) %></div>
+      <div class="project-menu-bullet"><%= link_to_unless_current User.model_name.human(:count => 2), project_users_path(@project) %></div>
+      <div class="project-menu-bullet"><%= link_to_unless_current t('edit'), edit_project_path(@project) %></div>
+      <div class="project-menu-bullet"><%= link_to_unless_current t('import'), import_project_stories_path(@project) %></div>
+      <div class="project-menu-bullet"><%= link_to t('export'), project_stories_path(@project, :format => :csv) %></div>
+    </div>
+  </div>
 <% end %>
 
 <table class="stories" width="100%">
