--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,9 @@
 
 <div id="header">
   <ul id="primary-nav">
-    <li class="root"><%= link_to t('fulcrum'), root_path %></li>
+    <%= yield :project_title_bar %>
     <% if current_user %>
+      <div id="user-login-controls">
       <li<%= ' class="secondary"'.html_safe if current_user.projects.present? %>>
         <%= link_to Project.model_name.human(:count => 2), root_path %>
         <%- if current_user.projects.present? -%>
@@ -27,10 +28,13 @@
       <li><%= link_to current_user.email, edit_user_registration_path %></li>
       <li><%= link_to t('log out'), destroy_user_session_path,
                       :method => :delete %></li>
+      </div>
     <% else %>
+      <div id="user-login-controls">
       <li><%= link_to t('log in'), new_user_session_path %></li>
       <%- unless Fulcrum::Application.config.fulcrum.disable_registration %>
       <li><%= link_to t('sign up'), new_user_registration_path %></li>
+      </div>
       <% end -%>
     <% end %>
   </ul>
