Adjusted CSS for projects overview.

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -25,4 +25,5 @@
   <% end %>
 </ul>
 
+<div style="clear: both"></div>
 <%= link_to t('projects.new project'), new_project_path, :class => :button %>
