--- a/app/assets/stylesheets/screen.css.scss
+++ b/app/assets/stylesheets/screen.css.scss
@@ -51,7 +51,7 @@ a img {
 a:visited {
   color: #ffffff;
 }
- 
+
 #header {
   background: $darkgrey;
   position: relative;
@@ -113,13 +113,13 @@ ul#primary-nav li.secondary ul li {
   line-height: 40px;
   color: #ffffff;
   margin: 0;
- 
+
   div.velocity {
     display: table-cell;
     font-size: 13px;
     width: 33%;
     text-align: center;
-    
+
     div.velocity_override_container {
       width: 220px;
       position: absolute;
@@ -166,8 +166,9 @@ ul#primary-nav li.secondary ul li {
 }
 
 #title_bar h1 {
-  font-size: 2em;
-  margin: 0.3em 0;
+  font-size: 18px;
+  margin: 0;
+  padding-left: 20px;
 }
 
 #main {
@@ -478,8 +479,8 @@ table#import tr.invalid, .alert {
 
 ul#projects {
   list-style: none;
-  width: 50%;
   padding-left: 0;
+  clear: both;
 }
 
 ul#projects li {
@@ -487,10 +488,12 @@ ul#projects li {
   @include background(linear-gradient(top, #efefef, #dfe1e2));
   @include box-shadow(0 1px 2px #aaaaaa);
   text-shadow: white 0 1px 0;
-  margin: 10px 0;
+  margin: 10px;
   padding: 10px;
   border: 1px solid #efefef;
   border-top: 1px solid #dfe1e2;
+  display: inline-block;
+  float: left;
 }
 ul#projects li:hover {
   @include background(linear-gradient(top, darken(#efefef, 10%), darken(#dfe1e2, 10%)));
@@ -513,16 +516,17 @@ a.button {
   @include background(linear-gradient(top, #efefef, #dfe1e2));
   @include box-shadow(0 1px 2px #aaaaaa);
   text-shadow: white 0 1px 0;
-  padding: 5px;
   @include border-radius(5px);
   border: 1px solid $darkgrey*1.5;
   text-decoration: none;
+  margin: 10px;
+  color: black;
+  padding: 5px;
 }
 
 
 
 a.button:hover {
-  color: white;
   text-shadow: $darkgrey 0 1px 0;
 }
 .tags{
@@ -757,12 +761,12 @@ div.spinner {
   }
 }
 
-div#keycut-help { 
-  top: 1em; left: 1em; 
-  position: absolute; opacity:0.8; 
+div#keycut-help {
+  top: 1em; left: 1em;
+  position: absolute; opacity:0.8;
   background:black; color:yellow;
   @include border-radius(5px);
-  
+
   a.close {
     color:yellow; text-align:right; display:block; margin:1em;
   }
