--- a/app/assets/stylesheets/screen.css.scss
+++ b/app/assets/stylesheets/screen.css.scss
@@ -489,18 +489,22 @@ ul#projects li {
   @include box-shadow(0 1px 2px #aaaaaa);
   text-shadow: white 0 1px 0;
   margin: 10px;
-  padding: 10px;
+  padding: 15px;
   border: 1px solid #efefef;
   border-top: 1px solid #dfe1e2;
   display: inline-block;
   float: left;
+  border-radius: 10px;
 }
 ul#projects li:hover {
   @include background(linear-gradient(top, darken(#efefef, 10%), darken(#dfe1e2, 10%)));
 }
 
 ul#projects li h2 {
-  display: inline;
+}
+
+ul#projects li a {
+  color: black;
 }
 
 div.project_options {
