--- a/app/assets/stylesheets/icons.css.scss
+++ b/app/assets/stylesheets/icons.css.scss
@@ -4,10 +4,11 @@ $icons-collapse-spacing:6px;
 @include all-icons-sprites;
 
 .icon{
-  width:16px;
-  height:16px;
-  padding:0;
-  display:inline-block;
+  width:32px;
+  height:32px;
+  padding: 0;
+  margin: 0;
+  display: table-cell;
   text-indent:-9999px;
 }
 
