--- a/app/assets/javascripts/templates/story.jst.ejs
+++ b/app/assets/javascripts/templates/story.jst.ejs
@@ -1,44 +1,49 @@
-<% if (story.estimable()) { %>
-<div class="state-actions">
-  <form>
-    <% _.each(story.point_values(), function(value) { %>
-    <input type="button" class="estimate" value="<%= value %>"/>
-    <% }); %>
-  </form>
-</div>
-<% } else if (story.events().length > 0) { %>
-<div class="state-actions">
-  <form>
-    <% _.each(story.events(),  function(value) { %>
-      <input type="button" class="transition <%= value %>" value="<%= value %>"/>
-    <% }); %>
-  </form>
-</div>
-<% } %>
-<div class="story-icons">
-  <% if (view.saveInProgress) { %>
-  <a class="icon icons-throbber" title="<%= I18n.t('saving') %>"></a>
-  <% } %>
-  <span>
-    <span class="icon icons-<%= story.get('story_type') %> story_type" title="<%= story.story_type %>: <%= story.id %>">
-      <%= story.story_type %>
-    </span>
+<div class="story-title">
+  <div class="story-description">
+    <% if (story.get('labels')) { %><span class="tags"><%= story.escape('labels') %></span><% } %>
+    <%= story.escape('title') %>
+    <% if (story.owned_by()) { %>
+      <abbr class="initials" title="<%= story.owned_by().escape('name') %>">
+        <%= story.owned_by().escape('initials') %>
+      </abbr>
+    <% } %>
+  </div><!-- story-description -->
+
+  <div class="story-action-bar">
+
+    <!-- Story complexity estimation and flow controls -->
+    <% if (story.estimable()) { %>
+    <form class="state-actions">
+      <% _.each(story.point_values(), function(value) { %>
+      <input type="button" class="estimate" value="<%= value %>"/>
+      <% }); %>
+    </form>
+    <% } else if (story.events().length > 0) { %>
+    <form class="state-actions">
+      <% _.each(story.events(),  function(value) { %>
+        <input type="button" class="transition <%= value %>" value="<%= value %>"/>
+      <% }); %>
+    </form>
+    <% } %>
+
+    <!-- Story notification and details icons -->
+    <% if (view.saveInProgress) { %>
+    <a class="icon icons-throbber" title="<%= I18n.t('saving') %>"></a>
+    <% } %>
+
     <% if (story.estimated()) { %>
     <span class="estimate estimate_<%= story.get('estimate') %>">
       <%= story.get('estimate') %>
     </span>
     <% } %>
+
+    <span class="icon icons-<%= story.get('story_type') %> story_type" title="<%= story.story_type %>: <%= story.id %>">
+      <%= story.story_type %>
+    </span>
+
     <% if (story.hasDetails()) { %>
     <span class="icon icons-details"></span>
     <% } %>
-  </span>
-</div>
-<div class="story-title">
-  <% if (story.get('labels')) { %><span class="tags"><%= story.escape('labels') %></span><% } %>
-  <%= story.escape('title') %>
-  <% if (story.owned_by()) { %>
-    <abbr class="initials" title="<%= story.owned_by().escape('name') %>">
-      <%= story.owned_by().escape('initials') %>
-    </abbr>
-  <% } %>
+
+  </div><!-- story-action-bar -->
 </div>
